[package]
name = "blueshift-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.10.1"
pinocchio-system = "0.5.0"
solana-address = {version = "2.2.0", features = ["curve25519"]}
solana-program-log = "1.1.0"

[dev-dependencies]
mollusk-svm = "0.10.3"
solana-account = "3.4.0"
solana-sdk = "4.0.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
